# CodexMonitor

./: .env.ota.example  .eslintrc.cjs  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  REMOTE_BACKEND_POC.md  flake.nix  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-codex-sidecar.yml  build-windows-artifact.yml  publish-ota-manifest.yml  release-windows.yml  release.yml
computer-mcp/: Cargo.toml  verify_observe.py
computer-mcp/examples/: act_demo.rs  click_verify.rs  observe_demo.rs
computer-mcp/src/: capture.rs  coords.rs  inject.rs  lib.rs  main.rs  safety.rs  vision.rs
docs/: app-server-events.md  browser-capability-design.md  browser-no-chrome-design.md  changelog.html  codebase-map.md  codex-native-image-flow.md  computer-use-design.md  deploy-plugin-design.md  enterprise-ai-dev-workbench-frontend-style-guide.md  index.html  mcp-elicitation-design.md  mobile-ios-tailscale-blueprint.md  ota-release-channels.md  ota-release.md  product-backlog.md  product-cuts.md  slash-commands.md  uat-release-test-plan.md
docs/architecture/: enterprise-ai-platform-architecture.html
scripts/: build-bundled-codex.mjs  build_run_ios.sh  build_run_ios_device.sh  check-codex-protocol.mjs  macos-fix-openssl.sh  release_testflight_ios.sh  sync-codex-runtime-utils.mjs  sync-codex-runtime-utils.test.mjs  sync-codex-runtime.mjs  sync-codex-upstream.sh  sync-git-sidecar.mjs  sync-git-sidecar.test.mjs
scripts/ota/: README.md  publish-tos.mjs  publish-tos.test.mjs
scripts/release/: windows-signing-workflows.test.mjs
src/: App.tsx  main.test.tsx  main.tsx  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.beta.conf.json  tauri.conf.json  tauri.dev.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: daemon_binary.rs  diagnostics.rs  enterprise_ai.rs  image_generation.rs  lib.rs  managed_runtime.rs  menu.rs  state.rs  storage.rs  tray.rs  types.rs  utils.rs
src-tauri/tests/: tauri_config.rs
(+435 files in other folders)
