[package]
name = "computer-mcp"
version = "0.1.0"
edition = "2021"
description = "AgentDesk computer-use sidecar: a local stdio MCP server that grounds (via a configured vision model through the gateway) and drives the local desktop. Bundled per-OS via externalBin (like codex-runtime). See docs/computer-use-design.md."
publish = false

# Standalone crate (NOT part of the src-tauri build — the app must not pull in enigo/xcap). Built
# per-OS in CI and bundled into src-tauri/binaries. Phase 3 currently ships only the pure
# coordinate/safety cores; xcap (capture) + enigo (inject) + the gateway grounding client + the
# stdio MCP loop are added in later commits and require real-machine integration testing.

[[bin]]
name = "computer-mcp"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
enigo = "0.6.1"
image = "0.25.10"
rmcp = { version = "1.8.0", features = ["server", "transport-io", "macros"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std", "process"] }
ureq = { version = "3.3.0", features = ["json"] }
xcap = "0.9.6"
